@@ -105,7 +105,7 @@ sub connectToMetasploit {
 }
 
 sub _connectToMetasploit {
-	global('$database $client $mclient $console @exploits @auxiliary @payloads @post');
+	global('$database $aclient $client $mclient $console @exploits @auxiliary @payloads @post');
 
 	# reset rejected fingerprints
 	let(&verify_server, %rejected => %());
@@ -152,7 +152,8 @@ sub _connectToMetasploit {
 
 			# connecting locally? go to Metasploit directly...
 			if ($1 eq "127.0.0.1" || $1 eq "::1" || $1 eq "localhost") {
-			        $client = [new MsgRpcImpl: $3, $4, $1, long($2), $null, $debug];
+				$client = [new MsgRpcImpl: $3, $4, $1, long($2), $null, $debug];
+				$aclient = [new RpcAsync: $client];
 				$mclient = $client;
 				initConsolePool();
 			}
